--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -21,8 +21,10 @@ data:
 
   molecular_gnn_pt: "molecular_gnn.pt"
   molecular_gnn_index_csv: "molecular_gnn_index.csv"
-  
+
+  fusion_graph_pt: "fusion_graph.pt"
   models_dir: "models"
+  gnn_models_dir: "models"
 
 preprocess:
   hu_min: -150
@@ -39,3 +41,17 @@ embeddings:
 molecular:
   embedding_dim: 256
   hidden_dim: 1024
+
+gnn:
+  k: 8
+  hidden_dim: 128
+  num_layers: 2
+  dropout: 0.2
+
+train_gnn:
+  seed: 42
+  epochs: 200
+  lr: 0.001
+  weight_decay: 0.0001
+  val_frac: 0.2
+  test_frac: 0.2
