--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -5,7 +5,10 @@ data:
   cptac_dicom_dir: "/Volumes/ugly/PANOPTIC_DATA/CPTAC-PDA"
   rnaseq_cct_dir: "/Volumes/ugly/PANOPTIC_DATA/cptac_rnaseq/RNAseq_Tumor.cct"
 
+
   # OUTPUTS
+  rnaseq_per_patient_tsv_dir: "/Volumes/ugly/PANOPTIC_DATA/cptac_rnaseq/per_patient_tsv"
+
   cptac_nifti_dir: "/Volumes/ugly/PANOPTIC_DATA/cptac_nifti"
   artifacts_dir: "/Users/asiyah/Documents/PANOPCTIC_v1/pdac/artifacts"
 
@@ -25,6 +28,9 @@ data:
   fusion_graph_pt: "fusion_graph.pt"
   models_dir: "models"
   gnn_models_dir: "models"
+
+  molecular_embedder_ckpt: "molecular_embedder.pt"      # saved weights for MolecularEmbedder
+  molecular_feature_cols_txt: "molecular_feature_cols.txt"  # saved gene column order
 
 preprocess:
   hu_min: -150
