--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -29,8 +29,8 @@ data:
   models_dir: "models"
   gnn_models_dir: "models"
 
-  molecular_embedder_ckpt: "molecular_embedder.pt"      # saved weights for MolecularEmbedder
-  molecular_feature_cols_txt: "molecular_feature_cols.txt"  # saved gene column order
+  molecular_embedder_ckpt: "molecular_embedder.pt"      
+  molecular_feature_cols_txt: "molecular_feature_cols.txt"  
 
 preprocess:
   hu_min: -150
@@ -53,7 +53,7 @@ gnn:
   knn_k: 10
   knn_metric: "cosine"    
   hidden_dim: 128
-  dropout: 0.5 # stronger regularizations
+  dropout: 0.5 
   lr: 0.001
   weight_decay: 0.0001
   epochs: 300
