--- a/Frontend/.env.example
+++ b/Frontend/.env.example
@@ -1,2 +1,2 @@
 # API URL for PANOPTIC backend (Vite requires VITE_ prefix for client env)
-VITE_API_BASE_URL=http://localhost:8000
+VITE_API_BASE_URL=https://panoptic-render.onrender.com
