Update API URL to panoptic-render-1.onrender.com

--- a/Frontend/.env.example
+++ b/Frontend/.env.example
@@ -1,2 +1,2 @@
 # API URL for PANOPTIC backend (Vite requires VITE_ prefix for client env)
-VITE_API_BASE_URL=https://panoptic-render.onrender.com
+VITE_API_BASE_URL=https://panoptic-render-1.onrender.com
